css/index.css
html{
  font-family:'Ubuntu','文泉驛微米黑','Microsoft YaHei',"ヒラギノ角ゴ Pro",sans-serif;
}
*, *:before, *:after {
 -moz-box-sizing: border-box;
 -webkit-box-sizing: border-box;
 box-sizing: border-box;
}
section{
  display:block;
  box-shadow: 0 8px 6px -6px #669FEC ;
  width:100%;
}
#intro{
  /*background:#89C355;*/
  background:#4E6F30;
}
.to_page{
  border-radius:50%;
  font-size:40px;
  text-align:center;
  color:white;
  padding:3px;
  border:solid 3px white;
  display:block;
  margin:170px auto 20px auto;
  width:60px;
  height:60px;
  letter-spacing:1px;
}
#setsumei{
  width:50%;
  float:left;
  border-radius:10px;
  background:rgb(183, 212, 156);
  padding:0 0 15px 0;
  margin:20px 0px 20px 100px;
}
#setsumei p{
  width:80%;
  line-height:1.5;
  font-size:20px;
  color:rgb(77, 81, 100);
  padding:10px;
  display:block;
  margin:0 auto;
}
.button{
  display:block;
  border-radius:10px;
  background:yellow;
  text-align:center;
  font-size:20px;
  float:left;
  width:17%;
  padding:10px 0 10px 0;
  margin-left:165px;
}
#latest{
  background:rgb(173, 216, 127);
}
#second-intro{
  width:80%;
  margin:0 auto;
}
#para_intro{
  color:rgb(54, 56, 3);
  font-size:30px;
  padding-top:100px;
  text-align:center;
  line-height:200%;
}
#thought{
  background:#769C60;
}
.centered h2{
  color:white;
  font-size:80px;
  padding-top:60px;
  text-align:center;
  letter-spacing:5px;
}
.centered > div{
  color:white;
  font-size:30px;
  padding-top:40px;
  text-align:left;
  margin:0 auto;
  line-height:1.5;
}

.half{
  float:left;
  width:45%;
  color:white;
  font-size:25px;
  padding:80px 50px;
  line-height:150%;
}
#team{
  background:rgb(206, 236, 142);
}
#big_logo{
  text-align:center;
  font-size:200px;
  color:white;
  padding-top:100px;
}
#doing{
  text-align:center;
  font-size:30px;
  color:white;
  padding-top:50px;
}
.thought_font{
  color:#fff;
  text-align:center;
}
#thought_slogan{
  font-size:100px;
  padding-top:50px;
}
.team_font{
  color:rgb(134, 151, 64);
  text-align:center
}
#team_title{
  font-size:100px;
  padding-top:50px;
}
.circular_img{
  width:250px;
  height:250px;
  border-radius:50%;
}
.image{
  width:250px;
}
#sprout{
  margin: 0 auto;
  padding-top:15px;
}
#team_slogan{
  text-align:center;
  font-size:50px;
  padding-top:25px;
  color:rgb(24, 112, 24);
}
footer{
  height:350px;
  background:#474b59;
}
footer p{
  color:white;
  font-size:20px;
  text-indent:4em;
  padding-top:30px;
  margin-left:50px;
}
footer span{
 display:block;
}
.centered{
  width:90%;
  margin:0 auto;
}
.one_third{
  width:33%;
  height:250px;
  background:rgb(146, 213, 112);
  border:solid 10px rgb(166, 218, 138);
  border-radius:20px;
  float:left;
}
.email{
  color:#43c469;
}
.social{
  margin:20px 0 0 40px;
}
.copy{
  border-left:solid grey 2px;
  float:right;
  padding-right:200px;
}
.copy span{
  font-size:30px;
  color:grey;
  padding:0 0 30px 10px;
}
@media screen and (min-width:960px){
  #setsumei{
    margin-left:150px;
  }
  .button{
    margin-left:240px;
  }
  #second-intro + img{
    margin-right:150px;
  }
}

